@startuml

title __SELENIUMJAVATPOINT's Class Diagram__\n

  namespace seleniumjavatpoint {
    class seleniumjavatpoint.BasePage {
    }
  }
  

  namespace seleniumjavatpoint {
    class seleniumjavatpoint.GoogleAboutPage {
    }
  }
  

  namespace seleniumjavatpoint {
    class seleniumjavatpoint.GoogleMainPage {
    }
  }
  

  seleniumjavatpoint.GoogleAboutPage -up-|> seleniumjavatpoint.BasePage
  seleniumjavatpoint.GoogleMainPage -up-|> seleniumjavatpoint.BasePage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
